--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,10 @@
       href="https://fonts.googleapis.com/css2?family=Stick+No+Bills:wght@200;300;400;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
